<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_game">Games</string>
    <string name="menu_movie">Movies</string>
    <string name="menu_music">Music</string>
    <string name="menu_book">Books</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_book">This is BookFragment</string>
    <string name="fragment_music">This is FragmentMusic</string>
    <string name="fragment_home">This is FragmentHome</string>
    <string name="fragment_game">This is GameFragment</string>
    <string name="new_releases">New Release Hit Films</string>
    <string name="latest">Catch the latest blockbusters</string>
    <string name="name">Movie Name</string>
    <string name="category">Category</string>
    <string name="score">0.0</string>
    <string name="price">$ %.2f</string>
    <string name="top_selling">This is TopSellingFragment</string>
    <string name="study">This is StudyFragment</string>
    <string name="geners">This is GenersFragment</string>
    <string name="bolly_woods">Bollywood Hits</string>
    <string name="more">more</string>
    <string name="top_geners">Top Geners</string>
    <string name="api_key">08085440c713f41a955032440859b74e</string>
    <string name="genre">Genre</string>

    <string-array name="tabs">
        <item>For You</item>
        <item>Top Selling</item>
        <item>New Releases</item>
        <item>Geners</item>
        <item>Study</item>
    </string-array>

    <string-array name="genres">
        <item>Action</item>
        <item>Comedy</item>
        <item>Horror</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Sci-Fi</item>
        <item>Fantasy</item>
        <item>Detective</item>
    </string-array>

    <string-array name="genreUrl">
        <item>https://m.media-amazon.com/images/M/MV5BMjE5MzcyNjk1M15BMl5BanBnXkFtZTcwMjQ4MjcxOQ@@._V1_.jpg</item>
        <item>https://media.comicbook.com/2020/08/the-boys-season-2-poster-homelander-clean--1231879.jpeg?auto=webp&amp;width=1200&amp;height=1778&amp;crop=1200:1778,smart</item>
        <item>https://assets-3.placeit.net/smart_templates/6617ce9a4e383f311476bf5fbc8afcd6/assets/jusl3qv9u2e2wjhdjtckihqw2rpevrvf.jpg</item>
        <item>https://cdn.shopify.com/s/files/1/1057/4964/products/Avatar-Vintage-Movie-Poster-Original-1-Sheet-27x41-2647_800x.progressive.jpg?v=1629774213</item>
        <item>https://m.media-amazon.com/images/M/MV5BYmU5OWM5ZTAtNjUzOC00NmUyLTgyOWMtMjlkNjdlMDAzMzU1XkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg</item>
        <item>https://www.indiewire.com/wp-content/uploads/2017/09/another-earth-2011.jpg?w=674</item>
        <item>https://cdn11.bigcommerce.com/s-ydriczk/images/stencil/1280x1280/products/89351/94616/The-Lord-Of-The-Rings-The-Two-Towers-Final-Style-Double-sided-original-movie-poster-buy-now-at-starstills__29242.1599759075.jpg?c=2?imbypass=on</item>
        <item>https://m.media-amazon.com/images/M/MV5BMGUwZjliMTAtNzAxZi00MWNiLWE2NzgtZGUxMGQxZjhhNDRiXkEyXkFqcGdeQXVyNjU1NzU3MzE@._V1_.jpg</item>
    </string-array>
</resources>