<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_baseline_movie_24"
            android:title="@string/menu_movie" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/menu_music" />
    </group>
</menu>